Fix bugs when redirect to phpmyadmin

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -56,7 +56,7 @@ http {
     	   #proxy_redirect https://$host/ /backend/;
 	}
 
-    	location /phpmyadmin {
+    	location /phpmyadmin/ {
     	   
     	   proxy_pass http://phpmyadmin/;
     	   #include proxy_params;
