Update frontend in reverse proxy

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,6 +40,11 @@ http {
         server backend:80;
     }
 
+    upstream frontend {
+        keepalive 20;
+        server frontend:3000;
+    }
+
     server {
         listen 80 default_server;
         listen 443 default_server;
@@ -65,6 +70,19 @@ http {
     	    proxy_set_header Connection "";
     	   proxy_redirect http://$host/ /phpmyadmin/; 
     	}
+
+        location / {
+            proxy_pass http://frontend/;
+
+            proxy_redirect                      / /frontend/;
+            proxy_set_header Host               $host;
+            proxy_set_header X-Real-IP          $remote_addr;
+            proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto  $scheme;
+    	    proxy_set_header Connection "";
+            proxy_read_timeout          1m;
+            proxy_connect_timeout       1m;
+        }
 
     }
 }
