--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,48 @@
 version: '2'
 
 services:
-    docker_proxy:
-        image: nginx:latest
+    nginx-proxy:
+        image: jwilder/nginx-proxy
         restart: always
         ports:
             - "80:80"
+            - "443:443"
+        volumes:                     
+            - ./current/public:/usr/share/nginx/html
+            - ./certs:/etc/nginx/certs:ro
+            - vhost:/etc/nginx/vhost.d
+            # - /usr/share/nginx/html
+            - /var/run/docker.sock:/tmp/docker.sock:ro
+        labels:
+            - "com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy=true"
+
+    letsencrypt:
+        image: jrcs/letsencrypt-nginx-proxy-companion
+        restart: always
+        volumes:
+            - ./certs:/etc/nginx/certs:rw
+            - /var/run/docker.sock:/var/run/docker.sock:ro
+            - vhost:/etc/nginx/vhost.d
+            - ./current/public:/usr/share/nginx/html
+
+    website:
+        image: nginx:latest
+        restart: always
+        # ports:
+            # - "80:80"
+            # - "443:443"
+        environment:
+            - VIRTUAL_HOST=geargame30.eng.cmu.ac.th
+            - LETSENCRYPT_HOST=geargame30.eng.cmu.ac.th
+            - LETSENCRYPT_EMAIL=wasutan_kiti@cmu.ac.th
         volumes:
             - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+            # - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
              
     backend:
         image: nginx:latest
         links:
-            - docker_proxy
+            - website
         ports:
             - "8080:80"
         volumes:
@@ -55,14 +85,16 @@ services:
             - /sessions
         links:
             - db 
-            - docker_proxy
+            - website
 
     frontend:
         build: ./web
         restart: always
         ports:
             - 3000:3000
-        
+
+volumes:
+    vhost:
 
 # networks:
 #     code-network:
