--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -48,7 +48,7 @@ http {
     server {
         listen 80 default_server;
         listen 443 default_server;
-        server_name geargames;
+        server_name geargame30.eng.cmu.ac.th;
     
     	location /api/ {
     	   
