Revert "Update php service"
This reverts commit 7636329ce4def02c014e4c044e9c204f4d0d4afa.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,7 @@ services:
         build: ./server/src/
         volumes:
             - ./logs:/app/logs:rw
+            - ./server/src:/app
         # networks:
         #     - code-network
 
